spacing issue done

--- a/css/main.css
+++ b/css/main.css
@@ -13137,7 +13137,7 @@ small,
   }
 
   .section {
-    padding: 50px 0px !important;
+    padding: 0px 0px !important;
   }
 
   .banner {
